# Projet-Tuteure

./: .gitignore  Automate.cpp  Automate.h  Automaton.cpp  Automaton.h  CMakeLists.txt  Notes.txt  main.cpp  mainTest.cpp  shader.cpp  test.cpp  testgpu.cpp
shaders/: PhongShader.frag  PhongShader.vert  basic.frag  basic.vert  bi_ifs.vert.glsl  decode-ifs.comp  decode-ifs64.comp  decode-ifs64LSM.comp  decode-ifsLSM.comp  ifs_cpu.vert  ifs_final.vert.glsl  ifs_gpu.vert  ifs_instanced.vert  ombrage.vert
